test/types/range/ferguson/range-generic-default2.good
range-generic-default2.chpl:5: In initializer:
range-generic-default2.chpl:7: error: invalid copy-initialization
range-generic-default2.chpl:7: error: initializing a range with strideKind.one from a range with strideKind.positive
  range-generic-default2.chpl:16: called as (MyRecord(1)).init(param p = 1, r: range(int(64),both,positive))
